# linux-broadcast

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  about.hbs  about.toml  deny.toml  main.py  requirements.txt  rustfmt.toml  settings.json  virtual-background.spec
.github/workflows/: aur-lint.yml  aur.yml  ci.yml  release.yml
app/: background.py  camera.py  gui.py  segment.py  settings.py  vcam.py
crates/app/: Cargo.toml
crates/app/src/: activation.rs  autostart.rs  backgrounds.rs  cameras.rs  config.rs  desktop_install.rs  icon.rs  lock.rs  main.rs  theme.rs  tray.rs  ui.rs  wayland_activation.rs
crates/app/src/ui/: footer.rs  header.rs  mod.rs  preview_pane.rs  sidebar.rs  widgets.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: compositor.rs  consumer_watch.rs  framing.rs  idle_loader.rs  lazy.rs  lib.rs  pipeline.rs  segmenter.rs  temporal.rs
crates/pipeline/src/compositor/: blend.rs  blur.rs  mod.rs  plate.rs  sample.rs  tests.rs
crates/pipeline/tests/: models_smoke.rs  synthetic_graph.rs
models/: README.md
packaging/: LinuxBroadcast.desktop  linux-broadcast.modprobe.conf  linux-broadcast.modules-load.conf
packaging/aur/: .SRCINFO  PKGBUILD  linux-broadcast.install
packaging/scripts/: postinst  postrm  prerm
scripts/: download_model.py  release.sh  setup_v4l2loopback.sh
tests/: test_segment.py
