[workspace]
resolver = "2"
members = ["crates/pipeline", "crates/app"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Pedrojok01/linux-broadcast"
authors = ["Pedrojok01"]
rust-version = "1.80"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"

# Pipeline
gstreamer = "0.23"
gstreamer-app = "0.23"
gstreamer-video = "0.23"
tract-onnx = "0.21"
ndarray = "0.16"
fast_image_resize = "5"
wide = "0.7"

# App / GUI
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
crossbeam-channel = "0.5"
directories = "5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
glob = "0.3"
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "tokio"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
