[workspace]
resolver = "2"
members = ["crates/pipeline", "crates/app"]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/Pedrojok01/linux-broadcast"
authors = ["Pedrojok01"]
rust-version = "1.88"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"

# Pipeline
gstreamer = "0.23"
gstreamer-app = "0.23"
gstreamer-video = "0.23"
ort = { version = "2.0.0-rc.10", default-features = false, features = ["std", "ndarray", "download-binaries", "tls-rustls"] }
ndarray = "0.16"
fast_image_resize = "5"
wide = "0.7"

# App / GUI
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
crossbeam-channel = "0.5"
directories = "5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
glob = "0.3"
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "async-std"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

# Workspace-wide lint bar. Mirrors what CI enforces (`-D warnings`) so that
# `cargo clippy` locally fails on the same things the pipeline does.
#
# `priority = -1` on the group lints lets individual lints below override
# without clippy erroring on the conflict — keep it if you ever need to
# `allow` a single lint on top of `clippy::all`.
[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
